version/0.24/_sources/api/solver/_autosummary/settings/views.rst.txt
:orphan:

.. _views:

views
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.views.views
    :show-inheritance:

.. rubric:: Attributes

============================================   =========================================

Attribute                                                                        Summary

============================================   =========================================
:ref:`camera <camera>`                                                   'camera' child.

:ref:`display_states <display_states>`                           'display_states' child.

:ref:`rendering_options <rendering_options>`                  'rendering_options' child.

:ref:`mirror_planes <mirror_planes>`               Enter the mirror planes options menu.

:ref:`mirror_zones <mirror_zones>`                 Set zones to mirror the domain about.

============================================   =========================================

.. rubric:: Methods

====================================================   ==========================================================================

Method                                                                                                                    Summary

====================================================   ==========================================================================
:ref:`auto_scale <auto_scale_3>`                                                                            'auto_scale' command.

:ref:`reset_to_default_view <reset_to_default_view>`                                              Reset view to front and center.

:ref:`delete_view <delete_view>`                                                                     Remove a view from the list.

:ref:`last_view <last_view>`                                          Return to the camera position before the last manipulation.

:ref:`next_view <next_view>`                               Return to the camera position after the current position in the stack.

:ref:`list_views <list_views>`                                                                   List predefined and saved views.

:ref:`restore_view <restore_view>`                                                                              Use a saved view.

:ref:`read_views <read_views>`                                                                       Read views from a view file.

:ref:`save_view <save_view>`                                                              Save the current view to the view list.

:ref:`write_views <write_views>`                                                             Write selected views to a view file.

:ref:`apply_mirror_planes <apply_mirror_planes>`                  To apply mirror planes for a symmetric or non-symmetric domain.

====================================================   ==========================================================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`graphics <graphics>`       'graphics' child.

==========================   =====================

